# making-a-PR

./: .copier-answers.yml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/neural-networks/: network.py
src/neural_network/: activations.py  network.py
tests/: test_activations.py  test_network.py
